# plotme

./: .drone.yml  .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  cookiecutter_replay.json  gitpyup.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  oss.yml
doc/: diagrams.tex
plotme/: __init__.py  __main__.py  helper.py  load_data.py  plot_info_template.json  plotme.py  plotting.py  read.py  schema.py
tests/: __init__.py  test_plotme.py
