[metadata]
platforms =
  Linux
  Windows
classifiers =
  Intended Audience :: Developers
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options.entry_points]
console_scripts =
     plotme = plotme.plotme:main

[bdist_wheel]
universal = 1